adding my files to my repository

--- a/works.html
+++ b/works.html
@@ -73,27 +73,49 @@
                     </article>
                     <article>
 
-                        <div class="iframe">
+                        <div class="iframe  justificar-izq">
                             <iframe width="640" height="360" frameborder="0" src="https://www.shadertoy.com/embed/NsdSWj?gui=true&t=10&paused=true&muted=false" allowfullscreen></iframe>
-                            <p></p>
+                            <!-- <p></p> -->
+                            <p>este shader es una</p>
+
                         </div>
                     </article>
-
+                    <article>
+                        <p>
+                            los shaders son instrucciones de codigo que se compilan para ser procesadas en las unidades graficas del hardware y no en los procesadores lo que los hace extremadamente rapidos pero complejos a la hora de programarlos y pensarlos.
+                            <br><br>
+                            <hr>
+                        </p>
+                    </article>
                     <article>
 
-                        <div class="iframe">
+                        <div class="iframe justificar-der">
+                            <p>este shader es una</p>
+
                             <iframe width="640" height="360" frameborder="0" src="https://www.shadertoy.com/embed/NddXWj?gui=true&t=10&paused=true&muted=false" allowfullscreen></iframe>
-                            <!-- <p>este shader es una</p> -->
                         </div>
                     </article>
-
+                    <article>
+                        <p>
+                            los shaders son instrucciones de codigo que se compilan para ser procesadas en las unidades graficas del hardware y no en los procesadores lo que los hace extremadamente rapidos pero complejos a la hora de programarlos y pensarlos.
+                            <br><br>
+                            <hr>
+                        </p>
+                    </article>
                     <article>
 
-                        <div class="iframe">
+                        <div class="iframe justificar-izq">
                             <iframe width="640" height="360" frameborder="0" src="https://www.shadertoy.com/embed/ssdSW2?gui=true&t=10&paused=true&muted=false" allowfullscreen></iframe> </div>
 
                     </article>
-
+                    <article>
+                        <p>
+                            los shaders son instrucciones de codigo que se compilan para ser procesadas en las unidades graficas del hardware y no en los procesadores lo que los hace extremadamente rapidos pero complejos a la hora de programarlos y pensarlos.
+                            <br><br>
+                            <!-- <hr> -->
+                        </p>
+                    </article>
+                    <!-- 
                     <p>
                         Maecenas pharetra pretium quam ut posuere. Quisque luctus sem purus. Phasellus vel nibh sed erat interdum placerat eget a dui. Vivamus viverra pharetra congue. Sed pretium mi eu dui congue pulvinar. Donec felis risus, malesuada quis tristique faucibus,
                         vestibulum non urna. Fusce nec orci pulvinar, blandit velit quis, finibus neque. Mauris malesuada metus eget ornare pellentesque. Nunc pharetra ante eget ullamcorper finibus. Orci varius natoque penatibus et magnis dis parturient
@@ -101,7 +123,7 @@
                         <br /><br /> Nullam ut erat sit amet elit ultricies tempor vel eget magna. Vivamus vitae diam purus. Fusce semper nisl a nulla congue feugiat. Maecenas et tincidunt felis, dapibus rhoncus sapien. Maecenas tortor tortor, sagittis
                         ac mattis sed, ullamcorper et orci. Pellentesque quis mollis massa. Donec lacinia turpis sapien, eu tincidunt dui rutrum elementum. Maecenas dictum et metus eget aliquam. Sed imperdiet lacinia vulputate. Vivamus mauris arcu, faucibus
                         pulvinar laoreet sed, scelerisque et dui.
-                    </p>
+                    </p> -->
 
                 </section>
             </main>
