adding my files to my repository

--- a/works.html
+++ b/works.html
@@ -50,61 +50,57 @@
                         <a href="https://thebookofshaders.com/">"The Book Of Shaders".</a>
                         <br> Y quizas, si le preguntamos a <a href="https://iquilezles.org/">Inigo Quilez</a> sean algo asi como su video
                         <a href="https://www.youtube.com/watch?v=8--5LwHRhjk">"pintar con matematicas"</a>
-                        <br>Los shades a duras penas llegaran los treinta años, pero humildemente nos han acompañando incansablemente al dia de hoy, desde la visualizacion de datos de las ciencias, como plantea Andres Colubri o Lev Manovich , hasta en
-                        obras de artes multimidiales y videojuegos.
-                        <br> la y su costado artistico como parte la programacion creativa no las pocas certezas que tenga de los shaders es que son una practica que incorpora tanto una sensibilidad artistica como profundamente matematica y algo de logica
-                        de programacion. sobre todo
-                        <!-- Originalmente esta pagina iba a ser una web de productos pero deci di que era mejor presentarme narrar un poco de mi desarrollo como programador y compartir mi interes actual por los shader en el ultimo año y medio aprendi
-                        a programar un poco de forma autodidacta con python, con guias y buscando contenido de universidades en internet, llegado un tiempo no sabia por donde continuar estudiando. Descubri Proccessing, un lenguje de programación orientado
-                        al arte y basado en java. Luego de un gran tiempo de explorar y generar programar con processing me vi limitado en recursos graficos y buscando soluciones para computar elementos encontre los shaders.
- -->
+
+                        <br> Personalmente creo que son practica que incorpora tanto una sensibilidad artistica como profundamente matematica y algo de logica de programacion.
+
                     </p>
                 </section>
 
                 <hr>
 
                 <section>
-                    <article>
+                    <!-- <article>
                         <p>
                             los shaders son instrucciones de codigo que se compilan para ser procesadas en las unidades graficas del hardware y no en los procesadores lo que los hace extremadamente rapidos pero complejos a la hora de programarlos y pensarlos.
                             <br><br>
                             <hr>
                         </p>
-                    </article>
+                    </article> -->
                     <article>
 
                         <div class="iframe  justificar-izq">
                             <iframe width="640" height="360" frameborder="0" src="https://www.shadertoy.com/embed/NsdSWj?gui=true&t=10&paused=true&muted=false" allowfullscreen></iframe>
                             <!-- <p></p> -->
-                            <p>este shader es una</p>
+                            <p>este es mi primer shader</p>
 
                         </div>
                     </article>
                     <article>
                         <p>
-                            los shaders son instrucciones de codigo que se compilan para ser procesadas en las unidades graficas del hardware y no en los procesadores lo que los hace extremadamente rapidos pero complejos a la hora de programarlos y pensarlos.
+                            los shaders se programan en un lenguaje heredero de C llamado <a href="https://es.wikipedia.org/wiki/OpenGL">openGL</a> sus instrucciones a diferencia de los programas que comunmente usamos se compilan para ser procesadas en
+                            las unidades graficas del hardware y no en los procesadores lo que los hace extremadamente rapidos pero complejos a la hora de pensarlos y debugearlos.
                             <br><br>
                             <hr>
                         </p>
                     </article>
                     <article>
 
-                        <div class="iframe justificar-der">
-                            <p>este shader es una</p>
+                        <div class="iframe">
 
                             <iframe width="640" height="360" frameborder="0" src="https://www.shadertoy.com/embed/NddXWj?gui=true&t=10&paused=true&muted=false" allowfullscreen></iframe>
+                            <p>una pequeña lampara de lava con shaders</p>
+
                         </div>
                     </article>
                     <article>
                         <p>
-                            los shaders son instrucciones de codigo que se compilan para ser procesadas en las unidades graficas del hardware y no en los procesadores lo que los hace extremadamente rapidos pero complejos a la hora de programarlos y pensarlos.
-                            <br><br>
+                            <br>Los shades son relativamente jovenes como tecnologia proximamente cumpliran treinta años, y nos acompañan al dia de hoy, desde la visualizacion de datos cientificos hasta en obras de artes multimidiales y videojuegos. <br><br>
                             <hr>
                         </p>
                     </article>
                     <article>
 
-                        <div class="iframe justificar-izq">
+                        <div class="iframe">
                             <iframe width="640" height="360" frameborder="0" src="https://www.shadertoy.com/embed/ssdSW2?gui=true&t=10&paused=true&muted=false" allowfullscreen></iframe> </div>
 
                     </article>
