--- a/works.html
+++ b/works.html
@@ -39,22 +39,23 @@
                 <br>
                 <!-- <br>
                 <br> -->
-                <section>
+                             <section>
                     <!-- class="statement" -->
                     <!-- <h2>¿Que son?</h2> -->
                     <p>
 
                         Los Shaders son una mezcla entre un proceso tecnico y un medio creativo. Piezas de codigo que pueden verse.
-                        <br> Nacidos del computo paralelo de pixeles, <a href="http://patriciogonzalezvivo.com/about.php">Patricio Gozales Vivo</a> los compara con
-                        <a href="https://thebookofshaders.com/01/?lan=es">la imprenta de Gutenberg</a> en su libro online
-                        <a href="https://thebookofshaders.com/">"The Book Of Shaders".</a>
-                        <br> Y quizas, si le preguntamos a <a href="https://iquilezles.org/">Inigo Quilez</a> sean algo asi como su video
-                        <a href="https://www.youtube.com/watch?v=8--5LwHRhjk">"pintar con matematicas"</a>
+                        <br> Nacidos del computo paralelo de pixeles, <a href="http://patriciogonzalezvivo.com/about.php" target="_blank">Patricio Gozales Vivo</a> los compara con
+                        <a href="https://thebookofshaders.com/01/?lan=es" target="_blank">la imprenta de Gutenberg</a> en su libro online
+                        <a href="https://thebookofshaders.com/" target="_blank">"The Book Of Shaders".</a>
+                        <br> Y quizas, si le preguntamos a <a href="https://iquilezles.org/" target="_blank">Inigo Quilez</a> sean algo asi como su video
+                        <a href="https://www.youtube.com/watch?v=8--5LwHRhjk" target="_blank">"pintar con matematicas"</a>
 
                         <br> Personalmente creo que son practica que incorpora tanto una sensibilidad artistica como profundamente matematica y algo de logica de programacion.
 
                     </p>
                 </section>
+
 
                 <hr>
 
